<resources>
    <string name="app_name">Dahej Virodhi Kshtriya Sangh</string>
    <string name="info_mother_name">Mother\'s Name</string>
    <string name="info_father_name">Father\'s Name</string>
    <string name="rajput_dropdown">Rajput</string>
    <string name="address">Address</string>
    <string name="enter_personal_information">Enter Personal Information</string>
    <string name="village_name">Village Name</string>
    <string name="colony_ward_name">Colony/Ward Name</string>
    <string name="your_highest_qualification">Your Highest Qualification</string>
    <string name="what_is_your_profession">What is your profession</string>
    <string name="enter_your_profession_details">Enter your profession details</string>
    <string name="collage_name">Collage Name</string>
    <string name="your_subjects_in_graduation">Your subjects in graduation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>